# advent_of_code_2019

./: README.md  makefile  pyproject.toml
src/aoc_2019/: __init__.py  __main__.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_8.py
src/aoc_2019/utils/: common.py  contents.py
